--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+#spring.security.user.name=admin
+#spring.security.user.password=admin
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.http=DEBUG
